@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.example.csufttally {
    namespace adapter {
      class com.example.csufttally.adapter.AccountAdapter {
          ~ context : Context
          ~ day : int
          ~ inflater : LayoutInflater
          ~ mDatas : List<AccountBean>
          ~ month : int
          ~ year : int
          + AccountAdapter()
          + AccountAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace adapter {
      class com.example.csufttally.adapter.AccountAdapter.ViewHolder {
          ~ beizhuTv : TextView
          ~ moneyTv : TextView
          ~ timeTv : TextView
          ~ typeIv : ImageView
          ~ typeTv : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace adapter {
      class com.example.csufttally.adapter.CalendarAdapter {
          + selPos : int
          + year : int
          ~ context : Context
          ~ mDatas : List<String>
          + CalendarAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
          + setYear()
          - loadDatas()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace adapter {
      class com.example.csufttally.adapter.ChartItemAdapter {
          ~ context : Context
          ~ inflater : LayoutInflater
          ~ mDatas : List<ChartItemBean>
          + ChartItemAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace adapter {
      class com.example.csufttally.adapter.ChartItemAdapter.ViewHolder {
          ~ iv : ImageView
          ~ ratioTv : TextView
          ~ totalTv : TextView
          ~ typeTv : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace adapter {
      class com.example.csufttally.adapter.ChartVpAdapter {
          ~ fragmentList : List<Fragment>
          + ChartVpAdapter()
          + getCount()
          + getItem()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace adapter {
      class com.example.csufttally.adapter.RecordPagerAdapter {
          ~ fragmentList : List<Fragment>
          ~ titles : String[]
          + RecordPagerAdapter()
          + getCount()
          + getItem()
          + getPageTitle()
      }
    }
  }
  

  com.example.csufttally.adapter.AccountAdapter -up-|> android.widget.BaseAdapter
  com.example.csufttally.adapter.AccountAdapter +-down- com.example.csufttally.adapter.AccountAdapter.ViewHolder
  com.example.csufttally.adapter.CalendarAdapter -up-|> android.widget.BaseAdapter
  com.example.csufttally.adapter.ChartItemAdapter -up-|> android.widget.BaseAdapter
  com.example.csufttally.adapter.ChartItemAdapter +-down- com.example.csufttally.adapter.ChartItemAdapter.ViewHolder
  com.example.csufttally.adapter.ChartVpAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter
  com.example.csufttally.adapter.RecordPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
